// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders product 1`] = `
<div>
  <div
    class="details-page"
  >
    <div
      class="loading"
    />
    <div
      class="item"
    >
      <h1
        class="item--title"
      >
        MOCK PRODUCT 1
      </h1>
      <div
        class="item--body"
      >
        <img
          class="item--picture"
          src="http://localhost:8080/image"
        />
        <div
          class="item--information"
        >
          <span>
             R$ 
            100
          </span>
          <p>
            <strong>
              Descrição:
            </strong>
            <br />
          </p>
        </div>
      </div>
    </div>
    <a
      class="return--button"
      href="/"
    >
      Voltar
    </a>
  </div>
</div>
`;

exports[`renders snapshot 1`] = `
<div
  class="details-page"
>
  <div
    class="loading"
  >
    <span>
      Loading...
    </span>
  </div>
  <a
    class="return--button"
    href="/"
  >
    Voltar
  </a>
</div>
`;
